# MCU

./: .gitmodules  README.md
Arduino/Tfmini/examples/SingleReading/: SingleReading.ino
Raspberry Pi Pico/Sensor/mpu/: CMakeLists.txt  mpu6050_i2c.c
